--- a/src/index.html
+++ b/src/index.html
@@ -10,25 +10,19 @@
     <nav>
       <div class="container">
         <div class="row">
-          <img
-            class="logo"
-            class="col-"
-            src="img/logo-leamo.png"
-            alt="logo de leamo"
-          />
-          <div class="col"><a class="ancre" href="#">Home</a></div>
-          <div class="col"><a class="ancre" href="#">Produits</a></div>
-          <div class="col"><a class="ancre" href="#">Nos valeurs</a></div>
-          <div class="col"><a class="ancre" href="#">Shop</a></div>
-          <div class="col"><a class="ancre" href="#">Find us</a></div>
+          <div class="col-2"><a class="ancre" href="#">Home</a></div>
+          <div class="col-2"><a class="ancre" href="#">Produits</a></div>
+          <div class="col-2"><a class="ancre" href="#">Nos valeurs</a></div>
+          <div class="col-2"><a class="ancre" href="#">Shop</a></div>
+          <div class="col-2"><a class="ancre" href="#">Find us</a></div>
         </div>
       </div>
     </nav>
 
     <main>
-      <div class="container">
-        <div class="row">
-          <div class="intro">
+      <div class="intro">
+        <div class="container">
+          <div class="row">
             <div class="col-2 col-sm-12">
               <h1 class="title-left">LET'S START</h1>
             </div>
@@ -47,6 +41,35 @@
           </div>
         </div>
       </div>
+      <div class="select"><h2>FRESH SELECTION</h2></div>
+
+      <article class="product-table1">
+        <h3>Tonic Bio</h3>
+        <img class="img-select" src="img/tonic-vitrine.png" alt="tonic bio" />
+        <div class="price-table">
+          <h4>Tonic Bio</h4>
+          <p class="price">dés 2,19 CHF</p>
+          <button class="button-select">Découvrir</button>
+        </div>
+      </article>
+      <article class="product-table2">
+        <h3>Tonic Bio</h3>
+        <img class="img-select" src="img/tonic-vitrine.png" alt="tonic bio" />
+        <div class="price-table">
+          <h4>Tonic Bio</h4>
+          <p class="price">dés 2,29 CHF</p>
+          <button class="button-select">Découvrir</button>
+        </div>
+      </article>
+      <article class="product-table3">
+        <h3>Tonic Bio</h3>
+        <img class="img-select" src="img/tonic-vitrine.png" alt="tonic bio" />
+        <div class="price-table">
+          <h4>Tonic Bio</h4>
+          <p class="price">dés 2,35 CHF</p>
+          <button class="button-select">Découvrir</button>
+        </div>
+      </article>
     </main>
 
     <script src="js/main.js" type="module"></script>
