--- a/src/index.html
+++ b/src/index.html
@@ -53,8 +53,8 @@
         </div>
       </article>
       <article class="product-table2">
-        <h3>Tonic Bio</h3>
-        <img class="img-select" src="img/tonic-vitrine.png" alt="tonic bio" />
+        <h3>Cola Bio</h3>
+        <img class="img-select" src="img/coca_vitrine.png" alt="tonic bio" />
         <div class="price-table">
           <h4>Tonic Bio</h4>
           <p class="price">dés 2,29 CHF</p>
@@ -62,14 +62,27 @@
         </div>
       </article>
       <article class="product-table3">
-        <h3>Tonic Bio</h3>
-        <img class="img-select" src="img/tonic-vitrine.png" alt="tonic bio" />
+        <h3>Beer Bio</h3>
+        <img class="img-select" src="img/beer-vitrine.png" alt="tonic bio" />
         <div class="price-table">
           <h4>Tonic Bio</h4>
           <p class="price">dés 2,35 CHF</p>
           <button class="button-select">Découvrir</button>
         </div>
       </article>
+      <div class="more-drink">
+        <img
+          class="img-alter"
+          src="img/altershop-product.png"
+          alt="produits divers"
+        />
+        <h1>Shop Now</h1>
+        <p>
+          Retrouvez notre séléction de boisson artinasanales et responsable sur
+          AlterFood
+        </p>
+        <button>découvrer</button>
+      </div>
     </main>
 
     <script src="js/main.js" type="module"></script>
