le html presque finit

--- a/src/index.html
+++ b/src/index.html
@@ -81,9 +81,102 @@
           Retrouvez notre séléction de boisson artinasanales et responsable sur
           AlterFood
         </p>
-        <button>découvrer</button>
+        <button>visiter</button>
       </div>
+      <div class="recipe"><h2>RECETTES</h2></div>
+      <div class="container">
+        <div class="row">
+          <img
+            class="col-6"
+            class="recipe_img"
+            src="img/img-cocktail/Illustration_sans_titre 2.png"
+            alt="verre de coca"
+          />
+          <div class="col-6">
+            <h2 class="recipe_title">COLA X VODKA</h2>
+            <p>
+              Déccouvrez la nouvelle recette de notre coctail le plus réalisé.
+              Hibiscus Vodka x Cola !
+            </p>
+            <button>découvrer</button>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <img
+            class="col-6"
+            class="recipe_img"
+            src="img/img-cocktail/Illustration_sans_titre.png"
+            alt="verre de tonic"
+          />
+          <div class="col-6">
+            <h2 class="recipe_title">TONIC X LEMON</h2>
+            <p>
+              Besoin d’un bon rafraichissement ? N’attendez plus pour essayer
+              notre mix : Tonic x Limonade !
+            </p>
+            <button>découvrer</button>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <img
+            class="col-6"
+            class="recipe_img"
+            src="img/img-cocktail/Illustration_sans_titre 1.png"
+            alt="verre de mate"
+          />
+          <div class="col-6">
+            <h2 class="recipe_title_side">Gin X MATE</h2>
+            <p>
+              Envie d’un peu de peps ? Notre mix Gin x Maté n’attend plus que
+              vous !
+            </p>
+            <button>découvrer</button>
+          </div>
+
+          <div class="commitment">
+            <h2>NOTRE ENGAGEMENT</h2>
+            <p>
+              Toutes les recettes de LEAMO sont réalisées avec des ingrédients
+              bio de prémiere qualité dans le respcet des techniques de
+              fabrications traditionelles.
+            </p>
+            <img
+              class="commitment_img"
+              src="img/LEAMO_RECIPES.png"
+              alt="4 bouteille de leamo"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="find-us"><h2>RETROUVEZ NOUS</h2></div>
+      <img src="img/shop.png" alt="un magasin" />
+      <h1 class="find_title">Nos Shop</h1>
+      <p class="find_country">France / Suisse / Belgique</p>
+      <button>choisir un magasin</button>
     </main>
+    <footer>
+      <a href="https://www.alterfood.fr">AlterFood</a>
+
+      <a href="https://www.alterfood.fr/contact/">Contact</a>
+
+      <a href="https://www.alterfood.fr/mentions-legales/">mentions legales</a>
+      <img src="img/logo-leamo.png" alt="logo-leamo" />
+
+      <a href="https://www.alterfood.fr/produits-naturels-et-responsables/"
+        ><img src="img/logo-alterfood-color.png" alt=""
+      /></a>
+      <a href="https://www.tensai-tea.com">
+        <img src="img/tensai.png" alt="the"
+      /></a>
+      <a href="https://www.dame-gingembre.com"
+        ><img src="img/ginger-shot.png" alt=""
+      /></a>
+      <a href="https://www.chilled.co"><img src="img/chiled.png" alt="" /></a>
+    </footer>
 
     <script src="js/main.js" type="module"></script>
   </body>
