--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,18 @@
     <nav>
       <div class="container">
         <div class="row">
-          <div class="col-2"><a class="ancre" href="#">Home</a></div>
-          <div class="col-2"><a class="ancre" href="#">Produits</a></div>
-          <div class="col-2"><a class="ancre" href="#">Nos valeurs</a></div>
-          <div class="col-2"><a class="ancre" href="#">Shop</a></div>
-          <div class="col-2"><a class="ancre" href="#">Find us</a></div>
+          <img class="col-2" src="img/logo-leamo.png" alt="logo de leamo" />
+          <div class="col-2">
+            <a class="ancre" href="#home">Home</a>
+          </div>
+          <div class="col-2">
+            <a class="ancre" href="#Freshselection">Produits</a>
+          </div>
+          <div class="col-2">
+            <a class="ancre" href="#valeur">Nos valeurs</a>
+          </div>
+          <div class="col-2"><a class="ancre" href="#shop">Shop</a></div>
+          <div class="col-2"><a class="ancre" href="#findus">Find us</a></div>
         </div>
       </div>
     </nav>
@@ -24,7 +31,7 @@
         <div class="container">
           <div class="row">
             <div class="col-2 col-sm-12">
-              <h1 class="title-left">LET'S START</h1>
+              <h1 class="title-left" id="home">LET'S START</h1>
             </div>
             <div class="col-2 col-sm-12">
               <p class="intro-text">
@@ -41,7 +48,7 @@
           </div>
         </div>
       </div>
-      <div class="select"><h2>FRESH SELECTION</h2></div>
+      <div class="select"><h2 id="Freshselection">FRESH SELECTION</h2></div>
 
       <article class="product-table1">
         <h3>Tonic Bio</h3>
@@ -76,7 +83,7 @@
           src="img/altershop-product.png"
           alt="produits divers"
         />
-        <h1>Shop Now</h1>
+        <h1 id="shop">Shop Now</h1>
         <p>
           Retrouvez notre séléction de boisson artinasanales et responsable sur
           AlterFood
@@ -138,7 +145,7 @@
           </div>
 
           <div class="commitment">
-            <h2>NOTRE ENGAGEMENT</h2>
+            <h2 id="valeur">NOTRE ENGAGEMENT</h2>
             <p>
               Toutes les recettes de LEAMO sont réalisées avec des ingrédients
               bio de prémiere qualité dans le respcet des techniques de
@@ -152,7 +159,7 @@
           </div>
         </div>
       </div>
-      <div class="find-us"><h2>RETROUVEZ NOUS</h2></div>
+      <div class="find-us"><h2 id="findus">RETROUVEZ NOUS</h2></div>
       <img src="img/shop.png" alt="un magasin" />
       <h1 class="find_title">Nos Shop</h1>
       <p class="find_country">France / Suisse / Belgique</p>
@@ -165,6 +172,15 @@
 
       <a href="https://www.alterfood.fr/mentions-legales/">mentions legales</a>
       <img src="img/logo-leamo.png" alt="logo-leamo" />
+      <a href="https://www.facebook.com/people/Leamo/100068005181525/"
+        ><img src="img/reseaux/square-facebook.png" alt=""
+      /></a>
+      <a href="https://www.instagram.com/leamo/?hl=fr"
+        ><img src="img/reseaux/square-instagram.png" alt=""
+      /></a>
+      <a href="https://twitter.com/explore"
+        ><img src="img/reseaux/square-twitter.png" alt=""
+      /></a>
 
       <a href="https://www.alterfood.fr/produits-naturels-et-responsables/"
         ><img src="img/logo-alterfood-color.png" alt=""
