--- a/src/index.html
+++ b/src/index.html
@@ -30,13 +30,13 @@
       <div class="intro">
         <div class="container">
           <div class="row">
-            <div class="col-2 col-sm-12">
+            <div>
               <h1 class="title-left" id="home">LET'S START</h1>
             </div>
             <div class="col-10 col-sm-12">
               <img class="intro-img" src="img/leamo_art.png" alt="leamo" />
             </div>
-            <div class="col-2 col-sm-12">
+            <div>
               <p class="intro-text">
                 LEAMO, c’est de la limonade bio réalisée dans le respect de
                 <br />
@@ -169,11 +169,14 @@
         <img  src="img/shop.png" alt="un magasin" />
         <h1 class="find_title">Nos Shop</h1>
         <p class="find_country">France / Suisse / Belgique</p>
-        <button>choisir un magasin</button>
+    <a class="btn-findus" href="https://www.google.com/maps/dir/46.995137,6.9275067/alter+food+boutique/
+        @47.8356734,2.3536919,7z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x47e66fe5875ac37d:
+        0xa6b142a7a8d88652!2m2!1d2.3274935!2d48.8702007">choisir un magasin</a>
       </div>
      
     </main>
     <footer>
+      <div>
       <a href="https://www.alterfood.fr">AlterFood</a>
 
       <a href="https://www.alterfood.fr/contact/">Contact</a>
@@ -201,6 +204,7 @@
       /></a>
       <a href="https://www.chilled.co"><img src="img/chiled.png" alt="" /></a>
     </footer>
+  </div>
 
     <script src="js/main.js" type="module"></script>
   </body>
