début du page produit

--- a/src/index.html
+++ b/src/index.html
@@ -49,14 +49,13 @@
         </div>
       </div>
       <div class="select"><h2 id="Freshselection">FRESH SELECTION</h2></div>
- 
         <article class="product-table1" ">
           <h3>Tonic Bio</h3>
           <img class="img-select" src="img/tonic-vitrine.png" alt="tonic bio" />
           <div class="price-table">
             <h4>Tonic Bio</h4>
             <p class="price">dés 2,19 CHF</p>
-            <button class="button-select">Découvrir</button>
+            <a class="button-select" href="produit.html">Découvrir</a>
           </div>
         </article>
         <article class="product-table2" >
@@ -65,7 +64,7 @@
           <div class="price-table">
             <h4>Tonic Bio</h4>
             <p class="price">dés 2,29 CHF</p>
-            <button class="button-select">Découvrir</button>
+            <a class="button-select" href="produit.html">Découvrir</a>
           </div>
         </article>
         <article class="product-table3" >
@@ -74,7 +73,7 @@
           <div class="price-table">
             <h4>Tonic Bio</h4>
             <p class="price">dés 2,35 CHF</p>
-            <button class="button-select">Découvrir</button>
+            <a class="button-select" href="produit.html">Découvrir</a>
           </div>
         </article>
       
@@ -105,7 +104,7 @@
           />
           <div class="col-6">
             <h2 class="recipe_title">COLA X VODKA</h2>
-            <p>
+            <p class="recipe-text">
               Déccouvrez la nouvelle recette de notre coctail le plus réalisé.
               Hibiscus Vodka x Cola !
             </p>
@@ -117,13 +116,13 @@
         <div class="row">
           <img
            
-            class="recipe_img"
+            class="recipeleft_img"
             src="img/img-cocktail/Illustration_sans_titre.png"
             alt="verre de tonic"
           />
           <div class="col-6">
-            <h2 class="recipe_title">TONIC X LEMON</h2>
-            <p>
+            <h2 class="recipe_title_side">TONIC X LEMON</h2>
+            <p class="recipe-text">
               Besoin d’un bon rafraichissement ? N’attendez plus pour essayer
               notre mix : Tonic x Limonade !
             </p>
@@ -140,8 +139,8 @@
             alt="verre de mate"
           />
           <div class="col-6">
-            <h2 class="recipe_title_side">Gin X MATE</h2>
-            <p>
+            <h2 class="recipe_title">Gin X MATE</h2>
+            <p class="recipe-text">
               Envie d’un peu de peps ? Notre mix Gin x Maté n’attend plus que
               vous !
             </p>
@@ -150,7 +149,7 @@
 
          <div class="commitment"> 
             <h2 id="valeur">NOTRE ENGAGEMENT</h2>
-            <p>
+            <p class="recipe-text">
               Toutes les recettes de LEAMO sont réalisées avec des ingrédients
               bio de prémiere qualité dans le respcet des techniques de
               fabrications traditionelles.
@@ -203,8 +202,9 @@
         ><img src="img/ginger-shot.png" alt=""
       /></a>
       <a href="https://www.chilled.co"><img src="img/chiled.png" alt="" /></a>
-    </footer>
+   
   </div>
+</footer>
 
     <script src="js/main.js" type="module"></script>
   </body>
