html finit du produit

--- a/src/produit.html
+++ b/src/produit.html
@@ -51,12 +51,55 @@
             alt="tonic-bio_leamo"
           />
         </div>
-        <h5>Tonic Bio</h5>
+        <h5>TONIC BIO</h5>
         <p class="tonic-product">
           Le tonic est réalisé à base de quinine avec une note d’armoise.Au goût
           légèrement relevé et à ses vertus antioxydantes, c’est une boisson
           saine, savoureuse et rafraîchissante.
         </p>
+        <h5>INGREDIENTS</h5>
+        <img class="bio" src="img/ingredients/armoise.jpg" alt="" />
+        <img class="bio" src="img/ingredients/quinquina.jpg" alt="" />
+        <img class="bio" src="img/ingredients/citron.jpg" alt="" />
+        <h5>TABLEAU</h5>
+        <img class="table-bio" src="img/tableau.png" alt="" />
+        <button>25cl</button>
+        <button>75cl</button>
+        <a class="product-cart" href="">shop now</a>
+      </div>
+      <div class="more-product">
+        <h2 class="more-select">PLUS DE PRODUITS</h2>
+        <article class="product-table1" ">
+          <h3>Tonic Bio</h3>
+          <img class="img-select" src="img/tonic-vitrine.png" alt="tonic bio" />
+          <div class="price-table">
+            <h4>Tonic Bio</h4>
+            <p class="price">dés 2,19 CHF</p>
+            <a class="button-select" href="produit.html">Découvrir</a>
+          </div>
+        </article>
+        <article class="product-table2" >
+          <h3>Cola Bio</h3>
+          <img class="img-select" src="img/coca_vitrine.png" alt="tonic bio" />
+          <div class="price-table">
+            <h4>Tonic Bio</h4>
+            <p class="price">dés 2,29 CHF</p>
+            <a class="button-select" href="produit.html">Découvrir</a>
+          </div>
+        </article>
+        <article class="product-table3" >
+          <h3>Beer Bio</h3>
+          <img class="img-select" src="img/beer-vitrine.png" alt="tonic bio" />
+          <div class="price-table">
+            <h4>Tonic Bio</h4>
+            <p class="price">dés 2,35 CHF</p>
+            <a class="button-select" href="produit.html">Découvrir</a>
+          </div>
+        </article>
+        <h1>SHOP NOW</h1>
+        <p class="shortcut" >Retrouvez notre séléction de boisson
+          artinasanales et responsable sur AlterFood</p>
+          <a href="https://www.alterfood.fr">visiter</a>
       </div>
     </main>
     <footer class="product-footer">
