--- a/src/produit.html
+++ b/src/produit.html
@@ -69,37 +69,38 @@
       </div>
       <div class="more-product">
         <h2 class="more-select">PLUS DE PRODUITS</h2>
-        <article class="product-table1" ">
-          <h3>Tonic Bio</h3>
-          <img class="img-select" src="img/tonic-vitrine.png" alt="tonic bio" />
-          <div class="price-table">
-            <h4>Tonic Bio</h4>
-            <p class="price">dés 2,19 CHF</p>
-            <a class="button-select" href="produit.html">Découvrir</a>
-          </div>
-        </article>
+      
         <article class="product-table2" >
-          <h3>Cola Bio</h3>
-          <img class="img-select" src="img/coca_vitrine.png" alt="tonic bio" />
+          <h3>Ginger Bio</h3>
+          <img class="img-select" src="img/plus de produit/gingerAle.png" alt="tonic bio" />
           <div class="price-table">
-            <h4>Tonic Bio</h4>
+            <h4>GingerAleBio</h4>
             <p class="price">dés 2,29 CHF</p>
             <a class="button-select" href="produit.html">Découvrir</a>
           </div>
         </article>
         <article class="product-table3" >
-          <h3>Beer Bio</h3>
-          <img class="img-select" src="img/beer-vitrine.png" alt="tonic bio" />
+          <h3>Ginger Bio</h3>
+          <img class="img-select" src="img/plus de produit/ginger.png" alt="tonic bio" />
           <div class="price-table">
-            <h4>Tonic Bio</h4>
-            <p class="price">dés 2,35 CHF</p>
+            <h4>GingerBeerBio</h4>
+            <p class="price">dés 2,19 CHF</p>
             <a class="button-select" href="produit.html">Découvrir</a>
           </div>
         </article>
-        <h1>SHOP NOW</h1>
-        <p class="shortcut" >Retrouvez notre séléction de boisson
+        <article class="product-table1" ">
+          <h3>Cola Bio</h3>
+          <img class="img-select" src="img/plus de produit/cola.png" alt="tonic bio" />
+          <div class="price-table">
+            <h4>Cola Bio</h4>
+            <p class="price">dés 2,19 CHF</p>
+            <a class="button-select" href="produit.html">Découvrir</a>
+          </div>
+        </article>
+        <h1 class="shortcut-title">SHOP NOW</h1>
+        <p class="shortcut" >Retrouvez notre séléction de boisson <br>
           artinasanales et responsable sur AlterFood</p>
-          <a href="https://www.alterfood.fr">visiter</a>
+          <a class="shortcut-btn" href="https://www.alterfood.fr">visiter</a>
       </div>
     </main>
     <footer class="product-footer">
