les changement dans fresh selection et shop

--- a/src/produit.html
+++ b/src/produit.html
@@ -69,19 +69,27 @@
       </div>
       <div class="more-product">
         <h2 class="more-select">PLUS DE PRODUITS</h2>
-      
-        <article class="product-table2" >
+
+        <article class="product-table2">
           <h3>Ginger Bio</h3>
-          <img class="img-select" src="img/plus de produit/gingerAle.png" alt="tonic bio" />
+          <img
+            class="img-select"
+            src="img/plus de produit/gingerAle.png"
+            alt="tonic bio"
+          />
           <div class="price-table">
             <h4>GingerAleBio</h4>
             <p class="price">dés 2,29 CHF</p>
             <a class="button-select" href="produit.html">Découvrir</a>
           </div>
         </article>
-        <article class="product-table3" >
+        <article class="product-table3">
           <h3>Ginger Bio</h3>
-          <img class="img-select" src="img/plus de produit/ginger.png" alt="tonic bio" />
+          <img
+            class="img-select"
+            src="img/plus de produit/ginger.png"
+            alt="tonic bio"
+          />
           <div class="price-table">
             <h4>GingerBeerBio</h4>
             <p class="price">dés 2,19 CHF</p>
@@ -89,18 +97,25 @@
           </div>
         </article>
         <article class="product-table1" ">
-          <h3>Cola Bio</h3>
-          <img class="img-select" src="img/plus de produit/cola.png" alt="tonic bio" />
-          <div class="price-table">
-            <h4>Cola Bio</h4>
-            <p class="price">dés 2,19 CHF</p>
-            <a class="button-select" href="produit.html">Découvrir</a>
-          </div>
+        <h3>Cola Bio</h3>
+        <img
+          class="img-select"
+          src="img/plus de produit/cola.png"
+          alt="tonic bio"
+        />
+        <div class="price-table">
+          <h4>Cola Bio</h4>
+          <p class="price">dés 2,19 CHF</p>
+          <a class="button-select" href="produit.html">Découvrir</a>
         </article>
+        </div>
+
         <h1 class="shortcut-title">SHOP NOW</h1>
-        <p class="shortcut" >Retrouvez notre séléction de boisson <br>
-          artinasanales et responsable sur AlterFood</p>
-          <a class="shortcut-btn" href="https://www.alterfood.fr">visiter</a>
+        <p class="shortcut">
+          Retrouvez notre séléction de boisson <br />
+          artinasanales et responsable sur AlterFood
+        </p>
+        <a class="shortcut-btn" href="https://www.alterfood.fr">visiter</a>
       </div>
     </main>
     <footer class="product-footer">
