--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,7 @@
             src="img/LEAMO_RECIPES.png"
             alt="4 bouteille de leamo"
           />
-            <p class="recipe-text">
+            <p class="commitment-text">
               Toutes les recettes de LEAMO sont réalisées avec des ingrédients
               bio de prémiere qualité dans le respcet des techniques de
               fabrications traditionelles.
